# YouTube2PodBean

./: .dockerignore  .env.template  .flake8  .gitignore  .travis.yml  Dockerfile  README.md  deploy.sh  docker-compose-build.yaml  docker-compose-deploy.yml  docker-compose-wp.yml  docker-compose.yaml  docker-compose.yml  mosquitto.conf  pyproject.toml  requirements.txt  settings.schema.json  uploads.pickle
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  start.fish
.github/: dependabot.yml
app/: app.py  config.py  constants.py  data.py  detect.py  discord.py  download.py  logging.py  main.py  podbean.py  server.py  sync.py  util.py  webhooks.py  wordpress.py  youtube.py
app/config/: core.py  discord.py  logging.py  pickle.py  podbean.py  server.py  wordpress.py  youtube.py
app/modules/: discord.py  podbean.py  wordpress.py
app/services/: discord.py  podbean.py  wordpress.py  youtube.py
app/util/: __init__.py  asyncio.py  config.py  download.py  logging.py  misc.py  pickle.py  streams.py  youtube.py
docs/: coreos-docker-compose.md  coreos-swap-space.md  step-by-step.md
scripts/: enable_swap.sh  remove_video.py
services/: Dockerfile  discord.Dockerfile  podbean.Dockerfile  service.Dockerfile  wordpress.Dockerfile  youtube.Dockerfile
