[tool.poetry]
name = "youtube2podbean"
version = "0.1.0"
description = ""
authors = ["Nima Shoghi <nimashoghi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests-oauthlib = "^1.3"
pafy = "^0.5.5"
youtube-dl = "^2020.3.24"
discord_webhook = "^0.7.0"
python-dateutil = "^2.8"
colorthief = "^0.2.1"
python-wordpress-xmlrpc = "^2.3"
aiofiles = "^0.4.0"
aiohttp = "^3.6"
hbmqtt = "^0.9.6"

[tool.poetry.dev-dependencies]
pylint = {version = "^2.4",allows-prereleases = true}
black = {version = "^19.10b0",allows-prereleases = true}
flake8 = "^3.7"
pytest = "^5.3"
bandit = "^1.6"
mypy = "^0.761"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
